<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
												   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
												   android:layout_height="match_parent">

	<LinearLayout
			android:gravity="center"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent" tools:ignore="ExtraText">

		<TextView
				android:id="@+id/joke"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:gravity="center_horizontal"
				android:text="@string/EN_joke"/>

		<TextView
				android:id="@+id/punchline"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:gravity="center_horizontal"
				android:text="@string/punchLine"/>
		<TextView
				android:id="@+id/jokeES"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:layout_marginTop="30dp"
				android:gravity="center_horizontal"
				android:text="@string/ES_Joke"/>

		<TextView
				android:id="@+id/punchlineES"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"

				android:textSize="20sp"
				android:gravity="center_horizontal"
				android:text="@string/remate"/>

		<Button
				android:id="@+id/ver_remate"
				android:layout_width="wrap_content"
				android:text="@string/ver_otro"
				android:layout_marginTop="30dp"
				android:textSize="20sp"
				android:layout_height="wrap_content"/>

	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>